--- a/ProjectManagement/Views/Users/SubAdminList.cshtml
+++ b/ProjectManagement/Views/Users/SubAdminList.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using ProjectManagement.Data
+@model IEnumerable<UserViewModel>
 @{
     ViewData["Title"] = "Sub-Admin List";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -9,4 +10,70 @@
 <div class="m-md-3">
     <h4 class="page-header mt-3">Sub-Admin List</h4>
     <p class="mb-3">@ViewBag.ProjectSector.Sector</p>
+
+    <div class="card card-body">
+        <div class="table-responsive">
+            <table id="data-table" class="table">
+                <thead>
+                    <tr>
+                        <th><strong>Sector</strong></th>
+                        <th><strong>Type</strong></th>
+                        <th><strong>Name</strong></th>
+                        <th><strong>User Name</strong></th>
+                        <th><strong>Phone</strong></th>
+                        <th><strong>Email</strong></th>
+                        <th><strong>Login Access</strong></th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Sector</td>
+                            <td>@item.Type.GetDescription()</td>
+                            <td>@item.Name</td>
+                            <td>@item.UserName</td>
+                            <td>@item.Phone</td>
+                            <td>@item.Email</td>
+                            <td>
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input lockClick" id="@item.RegistrationId" @(item.IsDeactivated ? "checked" : "")>
+                                    <label title="checked to de-activate" class="custom-control-label" for="@item.RegistrationId">@(item.IsDeactivated ? "Locked" : "Active")</label>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
+@section Scripts {
+    <script>
+        //on lock click
+        $('#data-table').on("click", ".lockClick", function() {
+            const id = $(this).attr("id");
+            if (!id) return;
+
+            $.ajax({
+                url: "/Users/DeactivateUserLogin",
+                data: { id },
+                success: response => {
+                    if (response.IsSuccess) {
+                        if ($(this).is(':checked'))
+                            $(this).next().text("Locked");
+                        else
+                            $(this).next().text("Active");
+                    }
+
+                    $.notify(response.Message, $(this).is(':checked') ? "error" : "success");
+                },
+                error: function(err) {
+                    console.log(err);
+                }
+            });
+        });
+    </script>
+}
